@@ -1,5 +1,11 @@
 2008-11-05	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/shutdown.c,doc/README.Kiosk: Add 'SaveShutdown'
+	  kiosk capability that allows admins to restrict the ability to
+	  save the session on logout (bug 2998).
+
+2008-11-05	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-startup.c: Be sure to set the current
 	  working directory of restored clients when starting them.
 
